<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.alfresco.tas</groupId>
    <artifactId>cmis</artifactId>
    <name>alfresco-tas-cmis</name>
    <parent>
        <groupId>org.alfresco</groupId>
        <artifactId>alfresco-community-repo-tests</artifactId>
        <version>23.3.21.1-SNAPSHOT</version>
    </parent>

    <organization>
        <name>Alfresco Software</name>
        <url>http://www.alfresco.com/</url>
    </organization>

    <properties>
        <maven.build.sourceVersion>17</maven.build.sourceVersion>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
        <maven-release.version>2.5.3</maven-release.version>
        <java.version>17</java.version>
        <suiteXmlFile>${project.basedir}/src/test/resources/cmis-suite.xml</suiteXmlFile>
        <cmis.binding />
        <cmis.basePath />
        <excludedGroups />
    </properties>

    <profiles>
        <profile>
            <id>run-cmis-browser</id>
            <properties>
                <cmis.binding>browser</cmis.binding>
                <cmis.basePath>/alfresco/api/-default-/public/cmis/versions/1.1/browser</cmis.basePath>
                <excludedGroups>not_supported_on_cmis_browser|renditions|bug-browser.*</excludedGroups>
            </properties>
        </profile>

        <profile>
            <id>run-cmis-webservices</id>
            <properties>
                <cmis.binding>webservices</cmis.binding>
                <cmis.basePath>/alfresco/cmisws/cmis?wsdl</cmis.basePath>
                <excludedGroups>not_supported_on_cmis_ws|renditions|bug-ws.*</excludedGroups>
            </properties>
        </profile>

        <profile>
            <id>run-cmis-atom</id>
            <properties>
                <cmis.binding>atom</cmis.binding>
                <cmis.basePath>/alfresco/api/-default-/public/cmis/versions/1.1/atom</cmis.basePath>
                <excludedGroups>not_supported_on_cmis_atom|renditions|bug-atom.*</excludedGroups>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <!-- alfresco tester settings -->
        <dependency>
            <groupId>org.alfresco.tas</groupId>
            <artifactId>utility</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>mysql</groupId>
                    <artifactId>mysql-connector-java</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.epam.reportportal</groupId>
            <artifactId>agent-java-testng</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                    </suiteXmlFiles>
                    <systemProperties>
                        <cmis.binding>${cmis.binding}</cmis.binding>
                        <cmis.basePath>${cmis.basePath}</cmis.basePath>
                    </systemProperties>
                    <argLine>
                        --illegal-access=warn
                    </argLine>
                </configuration>
            </plugin>
            <!-- Build only test jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
